--- a/src/AppBundle/Resources/views/part/kpi.html.twig
+++ b/src/AppBundle/Resources/views/part/kpi.html.twig
@@ -5,7 +5,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Nombre total de souscriptrions</h5>
-                      <span class="h2 font-weight-bold mb-0">{{countAndCash.nombre|number_format(0, ',', '.')}}</span>
+                      <span class="h2 font-weight-bold mb-0">{{counts.souscription|number_format(0, ',', '.')}}</span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
@@ -25,8 +25,8 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Total du chiffre d'affaire</h5>
-                      <span class="h2 font-weight-bold mb-0">{{countAndCash.total|number_format(0, ',', '.')}} XAF</span>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre  de renouvellements</h5>
+                      <span class="h2 font-weight-bold mb-0">{{counts.renouvellement|number_format(0, ',', '.')}} </span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
@@ -36,7 +36,7 @@
                   </div>
                   <p class="mt-3 mb-0 text-muted text-sm">
                     <span class="text-danger mr-2"></span>
-                    <span class="text-nowrap">Espèces collectées</span>
+                    <span class="text-nowrap">Nombre  de renouvellements</span>
                   </p>
                 </div>
               </div>
@@ -46,10 +46,10 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre total de Fiel soldiers</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Nombre  de Fiel soldiers actifs</h5>
                       <span class="h2 font-weight-bold mb-0">
                       {% if is_granted('ROLE_SUPERVISEUR') %}
-                        {{fiedSoldiersCount}}
+                        {{counts.nbfs}}
                       {% else %}
                         info restreinte
                       {% endif %}
@@ -74,7 +74,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Nombre de jours effectués</h5>
-                      <span class="h2 font-weight-bold mb-0">{{totalWorkedDays}} jours</span>
+                      <span class="h2 font-weight-bold mb-0">{{{{counts.nbjours}}}} jours</span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-info text-white rounded-circle shadow">
