--- a/src/AppBundle/Resources/views/part/kpi.html.twig
+++ b/src/AppBundle/Resources/views/part/kpi.html.twig
@@ -74,7 +74,7 @@
                   <div class="row">
                     <div class="col">
                       <h5 class="card-title text-uppercase text-muted mb-0">Nombre de jours effectués</h5>
-                      <span class="h2 font-weight-bold mb-0">{{{{counts.nbjours}}}} jours</span>
+                      <span class="h2 font-weight-bold mb-0">{{counts.nbjours}} jours</span>
                     </div>
                     <div class="col-auto">
                       <div class="icon icon-shape bg-info text-white rounded-circle shadow">
