--- a/app/Resources/views/produit/index.html.twig
+++ b/app/Resources/views/produit/index.html.twig
@@ -9,7 +9,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
-                <th>Duree</th>
+                <th>Priority</th>
                 <th>Cout</th>
                 <th>Actions</th>
             </tr>
@@ -19,7 +19,7 @@
             <tr>
                 <td><a href="{{ path('produit_show', { 'id': produit.id }) }}">{{ produit.id }}</a></td>
                 <td>{{ produit.nom }}</td>
-                <td>{{ produit.duree }}</td>
+                <td>{{ produit.priority }}</td>
                 <td>{{ produit.cout }}</td>
                 <td>
                     <ul>
