--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -77,27 +77,22 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="{{ path("homepage") }}">
-              <i class="ni ni-tv-2 text-primary"></i> Overview
+              <i class="ni ni-tv-2 text-primary"></i> Vue d'ensemble
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{{ path("commende_performances") }}">
-              <i class="ni ni-chart-bar-32 text-info"></i>Performances
+              <i class="ni ni-chart-bar-32 text-info"></i>Performances BA
             </a>
           </li>             
           <li class="nav-item">
             <a class="nav-link" href="{{ path("commende_index") }}">
-              <i class="ni ni-single-copy-04 text-success"></i> Rapports
+              <i class="ni ni-single-copy-04 text-success"></i>Historique des rapports
             </a>
-          </li>  
+          </li>             
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <i class="ni ni-single-copy-04 text-success"></i> Documents
-            </a>
-          </li>           
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="ni ni-image text-orange"></i> Galerie
+              <i class="ni ni-image text-orange"></i> Photos et fichiers
             </a>
           </li>                           
         </ul>
