--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,5 +1,5 @@
 {% extends "layout.html.twig" %}
-{% block title %}Bienenue {% endblock %} 
+{% block title %}Bienvenue {% endblock %} 
      {% block stylesheets %}
      {{parent()}}
     <link rel="stylesheet" type="text/css" media="all" href="{{ asset('assets/vendor/bootstrap.daterangepicker/daterangepicker-bs3.css') }}" />
