--- a/src/AppBundle/Resources/views/part/navbar.html.twig
+++ b/src/AppBundle/Resources/views/part/navbar.html.twig
@@ -1,21 +1,34 @@
     <!-- Top navbar -->
     <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
       <div class="container-fluid">
-        <!-- Brand -->
-        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="#">Overview</a>
+<div class="dropdown open">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    {{app.session.get('region')|default('Toute les villes')}}
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+    <a class="dropdown-item" href="{{ path('set_region',{'region':'Douala'}) }}">Douala</a>
+     <a class="dropdown-item" href="{{ path('set_region',{'region':'Yaounde'}) }}">Yaoundé</a>
+    <a class="dropdown-item" href="{{ path('set_region',{'region':'Bafoussam'}) }}">Bafoussam</a>
+    <a class="dropdown-item" href="{{ path('set_region',{'region':'Dschang'}) }}">Dschang</a>
+    <a class="dropdown-item" href="{{ path('set_region',{'region':'Garoua'}) }}">Garoua</a>
+    <a class="dropdown-item" href="{{ path('set_region',{'region':'Maroua'}) }}">Maroua</a>
+    <a class="dropdown-item" href="{{ path('set_region') }}">Toute les villes</a>
+  </div>
+</div>
+        <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="#">{{title}}</a>
         <!-- Form -->
         <form method="post" action="{{ path('set_periode') }}" class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
           <div class="form-group mb-0">
             <div class="input-group input-group-alternative">
                 {% set start_date_formated=app.session.get('start_date_formated')?app.session.get('start_date_formated'):app.session.get('start_date_formated')|date('01/m/Y') %}
-    {% set end_date_formated=app.session.get('end_date_formated')? app.session.get('end_date_formated'):app.session.get('end_date_formated')|date('t/m/Y')  %}
-    {% set periode=app.session.get('periode')%}
+           {% set end_date_formated=app.session.get('end_date_formated')? app.session.get('end_date_formated'):app.session.get('end_date_formated')|date('t/m/Y')  %}
+           {% set periode=app.session.get('periode')%}
               <div class="input-group-prepend">
                 <span class="input-group-text"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
               </div>
               <input class="form-control" placeholder="période" type="text" name="periode" id="periode"  value="{{start_date_formated}} - {{end_date_formated}}" data-from="{{ start_date_formated}}" data-to="{{ end_date_formated }}">
-              <div class="input-group-apend">
-                <button type="submit" class=" input-group-text btn btn-default btn-sm">Rechercher</button>
+              <div class="input-group-apend mt-2 mr-2">
+                <button type="submit" class=" btn btn-info btn-sm">Rechercher</button>
               </div>              
             </div>
           </div>
@@ -29,7 +42,7 @@
                   <img alt="Image placeholder" src="{{ asset('assets/img/theme/team-4-800x800.jpg') }}">
                 </span>
                 <div class="media-body ml-2 d-none d-lg-block">
-                  <span class="mb-0 text-sm  font-weight-bold">{{  app.user.username }}</span>
+                  <span class="mb-0 text-sm  font-weight-bold">{{app.user.username }}</span>
                 </div>
               </div>
             </a>
