--- a/src/AppBundle/Resources/views/performances.html.twig
+++ b/src/AppBundle/Resources/views/performances.html.twig
@@ -5,8 +5,15 @@
         <div class="col">
           <div class="card shadow">
             <div class="card-header border-0">
-              <h3 class="mb-0">Aperçu des performances</h3>
-            </div>   
+              <div class="row align-items-center">
+                <div class="col">
+                  <h3 class="mb-0">Performances individuelles</h3>
+                </div>
+                <div class="col text-right">
+                <button onclick="exportTableToExcel('myTable', 'members-data')" class="btn btn-sm btn-primary">Exporter les performances</button>
+                </div>
+              </div>
+            </div>  
         <div class="table-responsive">
               <table class="table align-items-center table-flush" id="myTable">
                 <thead class="thead-light">
@@ -54,4 +61,40 @@
         </div>
       </div>
 
+{% endblock %}
+  {% block javascripts %}
+  {{parent()}}
+<script type="text/javascript">
+'use strict';
+function exportTableToExcel(tableID, filename = ''){
+    var downloadLink;
+    var dataType = 'application/vnd.ms-excel';
+    var tableSelect = document.getElementById(tableID);
+    var tableHTML = tableSelect.outerHTML.replace(/ /g, '%20');
+    
+    // Specify file name
+    filename = filename?filename+'.xls':'excel_data.xls';
+    
+    // Create download link element
+    downloadLink = document.createElement("a");
+    
+    document.body.appendChild(downloadLink);
+    
+    if(navigator.msSaveOrOpenBlob){
+        var blob = new Blob(['\ufeff', tableHTML], {
+            type: dataType
+        });
+        navigator.msSaveOrOpenBlob( blob, filename);
+    }else{
+        // Create a link to the file
+        downloadLink.href = 'data:' + dataType + ', ' + tableHTML;
+    
+        // Setting the file name
+        downloadLink.download = filename;
+        
+        //triggering the function
+        downloadLink.click();
+    }
+}
+</script>        
 {% endblock %}
