--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -26,7 +26,9 @@
                   <h3 class="mb-0">Performances individuelles (Apperçu)</h3>
                 </div>
                 <div class="col text-right">
-                <button onclick="exportTableToExcel('summerTable', 'members-data')" class="btn btn-sm btn-primary">Exporter les performances</button>
+                <a  href="{{ path("commende_performances") }}" class="btn btn-sm btn-primary">
+                  Toutes les performances
+                </a>
                 </div>
               </div>
             </div>
