--- a/src/AppBundle/Resources/views/part/menu.html.twig
+++ b/src/AppBundle/Resources/views/part/menu.html.twig
@@ -91,7 +91,7 @@
             </a>
           </li>             
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{{ path("docs_photos") }}">
               <i class="ni ni-image text-orange"></i> Photos et fichiers
             </a>
           </li>                           
