--- a/app/Resources/views/commende/news.html.twig
+++ b/app/Resources/views/commende/news.html.twig
@@ -32,7 +32,7 @@
     {{ form_end(form) }}
     <ul>
         <li>
-            <a href="{{ path('app') }}">Aller à l'accueil</a>
+            <a href="{{ path('homepage') }}">Aller à l'accueil</a>
         </li>
    
 {% endblock %}
