--- a/app/Resources/views/commende/news.html.twig
+++ b/app/Resources/views/commende/news.html.twig
@@ -31,6 +31,6 @@
     {{ form_end(form) }}
     <ul>
         <li>
-            <a href="{{ path('commende_news') }}">Aller à l'accueil</a>
+            <a href="{{ path('commendes_news') }}">Aller à l'accueil</a>
         </li>
 {% endblock %}
