Data base upgrade to hobby-basic-> 9$/month

--- a/src/AppBundle/Resources/views/index.html.twig
+++ b/src/AppBundle/Resources/views/index.html.twig
@@ -23,7 +23,7 @@
             <div class="card-header border-0">
               <div class="row align-items-center">
                 <div class="col">
-                  <h3 class="mb-0">Performances individuelles (Apperçu)</h3>
+                  <h3 class="mb-0">Performances individuelles</h3>
                 </div>
                 <div class="col text-right">
                 <a  href="{{ path("commende_performances") }}" class="btn btn-sm btn-primary">
