--- a/src/AppBundle/Resources/views/performances.html.twig
+++ b/src/AppBundle/Resources/views/performances.html.twig
@@ -10,7 +10,7 @@
                   <h3 class="mb-0">Performances individuelles</h3>
                 </div>
                 <div class="col text-right">
-                <button href="{{ path('commende_performances_excel') }}" class="btn btn-sm btn-primary">Exporter les performances</button>
+                <a href="{{ path('commende_performances_excel') }}" class="btn btn-sm btn-primary">Exporter les performances</a>
                 </div>
               </div>
             </div>  
